# pyhomely

./: CHANGELOG.md  LICENSE  README.md  build.cmd  pyproject.toml
homely/: api.py  const.py  helpers.py  homely.py  model.py
pyhomely/: __init__.py  helpers.py  homely.py
test/: load_data_from_json.py
test/respone-examples/: home.json  locations.json
tests/: load_data_from_json.py  test_data_from_json.py  test_homelyapi.py
tests/response-examples/: event_alarm-state-changed.json  event_device-state-changed.json  home.json  locations.json
