# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhomely"
version = "0.9.0"
description = "Module for intergartion with Homely alarm system"
readme = "README.md"
authors = [{ name = "Jan Egil Korsvik", email = "janegil.korsvik@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["homely", "api", "alarm"]
dependencies = [
    "python-engineio==3.14.2",
    "python-socketio==4.6.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/noppo/pyhomely"
